2.projects/nims-inference/nim-deploy/helm/scaling-lb-monitoring/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nim-llm-alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: "200-299"
    alb.ingress.kubernetes.io/healthcheck-path: "/v1/health/ready"
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '100'
        
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nim-llm-service # Replace with the service name you created for nim-llm
                port:
                  number: 8000
